# LogScope

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  logscope-handbook.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  generate.py
docs/: decisions.md
logscope/: cli.py  config.py  metrics.py  model.py
logscope/ai/: __init__.py  cache.py  summarizer.py
logscope/anomaly/: __init__.py  detector.py
logscope/cluster/: __init__.py  drain.py
logscope/index/: __init__.py  store.py
logscope/ingest/: __init__.py  source.py  tailer.py
logscope/net/: __init__.py  agent.py  protocol.py  server.py
logscope/parse/: __init__.py  formats.py  parser.py
logscope/query/: __init__.py  ast.py  lexer.py  parser.py
logscope/tui/: __init__.py  app.py  widgets.py
tests/: test_ai.py  test_anomaly.py  test_config.py  test_drain.py  test_metrics.py  test_model.py  test_net_integration.py  test_parser.py  test_protocol.py  test_query.py  test_source.py  test_store.py  test_tailer.py  test_tui_smoke.py  test_widgets.py
