[build-system]
requires= ["setuptools>=68"]
build-backend= "setuptools.build_meta"
[project]
name= "logscope"
version= "0.1.0"
description= "A terminal-native log-intelligence and incident-triage tool"
readme= "README.md"
requires-python = ">=3.11"
dependencies= [
    "typer>=0.12",
    "textual>=0.60",
    "httpx>= 0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
logscope = "logscope.cli:app"

[tool.setuptools.packages.find]
include = ["logscope*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"