[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logscope"
version = "0.1.0"
description = "A terminal-native log-intelligence and incident-triage tool"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Chinmai" }]
keywords = ["logs", "observability", "tui", "clustering", "anomaly-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12",
    "textual>=0.60",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
logscope = "logscope.cli:app"

[tool.setuptools.packages.find]
include = ["logscope*"]

[tool.setuptools.package-data]
logscope = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
